# cpp-ide-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  justfile  literals.cpp  main.cpp  no_module.cpp  source_loc.cpp
.devcontainer/: Dockerfile  Dockerfile.deb  devcontainer.json
cmake/: ClangLibcxxModules.cmake
